5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4371/executions/1577_1332.log
== SUBMITION (2019-04-01 21:19:43) 
-- CODE:
aresta =5
area = 3/2*3**0.5*a*a
 
print(round(area, 4))
-- EXECUTION TIME:
0.195332
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1332/main.py", line 2, in <module>
    area = 3/2*3**0.5*a*a
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:20:39) 
-- CODE:
aresta =5
area = 3/2*3**0.5*a*a
 
print(round(area, 4))
-- EXECUTION TIME:
0.133916
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1332/main.py", line 2, in <module>
    area = 3/2*3**0.5*a*a
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:20:42) 
-- CODE:
aresta =5
area = 3/2*3**0.5*a*a
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*3**0.5*a*a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:20:58) 
-- CODE:
a =5
area = 3/2*3**0.5*a*a
 
print(round(area, 4))
-- EXECUTION TIME:
0.144009
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
